Fix scrollbar bug and add new scrollbar design

--- a/src/app/pages/dashboard/dashboard.component.sass
+++ b/src/app/pages/dashboard/dashboard.component.sass
@@ -7,10 +7,6 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-.app-layout
-  height: 100vh
-  overflow-y: hidden
-
 .menu-sidebar
   position: relative
   z-index: 10
@@ -65,7 +61,7 @@ nz-header
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08)
 
 .inner-layout
-  padding: 15px
+  padding: 12px
 
 .theme-switch
   margin-right: 10px
